--- a/src/main/resources/initialization/l10n/categories/de.json
+++ b/src/main/resources/initialization/l10n/categories/de.json
@@ -10,14 +10,14 @@
   "9": "Afrika",
   "10": "Amerika",
   "11": "Asien",
-  "12": "Australie",
+  "12": "Australien",
   "13": "Europa",
   "14": "Karibik / Exotik",
   "15": "Mittlerer-/ & Naher Osten",
   "16": "Osteuropa",
   "17": "Auflauf",
   "18": "Aufstrich",
-  "19": "Baken",
+  "19": "Backen",
   "20": "Barbecue & Grill",
   "21": "Blanchieren",
   "22": "Rösten",
@@ -32,13 +32,13 @@
   "31": "Gemüse",
   "32": "Gewürze / Öl / Essig / Pasten",
   "33": "Grundrezepte",
-  "34": "Haltbarmache",
+  "34": "Haltbarmachen",
   "35": "Krustentiere / Muscheln",
   "36": "Käs",
   "37": "Kochen",
   "38": "Marinade",
   "39": "Mehlspeisen",
-  "40": "Mikrowell",
+  "40": "Mikrowelle",
   "41": "Molekularküche",
   "42": "Nudeln",
   "43": "Römertopf",
