--- a/src/main/resources/language/messages.properties
+++ b/src/main/resources/language/messages.properties
@@ -39,3 +39,31 @@ html-password_recovery_mail-hint_2=Hint: This link is valid for 60 minutes.
 html-password_recovery_mail-hint_3=Yours sincerely, Your FlavorMate Team.
 html-password_recovery_mail-hint_4=This is an automatically generated message. Please do not reply to this mail.
 html-password_recovery_mail-reset_password=Reset password
+# Public Recipe
+public-recipe_prep-time=Preparation time
+public-recipe_cook-time=Cook time
+public-recipe_rest-time=Rest time
+public-recipe_duration_days=d.
+public-recipe_duration_hours=h.
+public-recipe_duration_minutes=min.
+public-recipe_duration_seconds=sec.
+public-recipe_ingredients-title=Ingredients
+public-recipe_instructions-title=Instructions
+public-recipe_informations-title=Informations
+public-recipe_categories-title=Categories
+public-recipe_tags-title=Tags
+public-recipe_published-title=Published
+public-recipe_version-title=Version
+public-recipe_open-original=Open original
+# Course
+course_appetizer=Appetizer
+course_main-dish=Main dish
+course_dessert=Dessert
+course_side-dish=Side dish
+course_bakery=Bakery
+course_drink=Drink
+# Diet
+diet_meat=Meat
+diet_fish=Fish
+diet_vegetarian=Vegetarian
+diet_vegan=Vegan
