- optimized public recipe site

--- a/src/main/resources/language/messages.properties
+++ b/src/main/resources/language/messages.properties
@@ -55,6 +55,9 @@ public-recipe_tags-title=Tags
 public-recipe_published-title=Published
 public-recipe_version-title=Version
 public-recipe_open-original=Open original
+public-recipe_app-hint-1=This recipe page is limited in its functionality.
+public-recipe_app-hint-2=To use all functions, open this site in the FlavorMate app.
+public-recipe_app-hint-3=If you don't have the app already, you can download it.
 # Course
 course_appetizer=Appetizer
 course_main-dish=Main dish
