--- a/src/main/resources/language/messages_de.properties
+++ b/src/main/resources/language/messages_de.properties
@@ -53,6 +53,9 @@ public-recipe_tags-title=Tags
 public-recipe_published-title=Veröffentlicht
 public-recipe_version-title=Version
 public-recipe_open-original=Original öffnen
+public-recipe_app-hint-1=Diese Rezeptanzeige ist in ihrer Funktionalität limitiert.
+public-recipe_app-hint-2=Um alle Funktionen nutzen zu können, öffne diese Seite in der FlavorMate App.
+public-recipe_app-hint-3=Falls du die App noch nicht besitzt, kannst du sie dir herunterladen.
 # Course
 course_appetizer=Vorspeise
 course_main-dish=Hauptspeise
