--- a/src/main/resources/language/messages_de.properties
+++ b/src/main/resources/language/messages_de.properties
@@ -37,3 +37,34 @@ html-password_recovery_mail-hint_2=Hinweis: Dieser Link ist für 60 Minuten gül
 html-password_recovery_mail-hint_3=Mit freundlichen Grüßen, dein FlavorMate Team.
 html-password_recovery_mail-hint_4=Dies ist eine automatisch generierte Nachricht. Bitte antworte nicht auf diese E-Mail.
 html-password_recovery_mail-reset_password=Passwort zurücksetzen
+# Public Recipe
+public-recipe_prep-time=Vorbereitungszeit
+public-recipe_cook-time=Kochzeit
+public-recipe_rest-time=Ruhezeit
+public-recipe_duration_days=Tg.
+public-recipe_duration_hours=Std.
+public-recipe_duration_minutes=Min.
+public-recipe_duration_seconds=Sek.
+public-recipe_ingredients-title=Zutaten
+public-recipe_instructions-title=Schritte
+public-recipe_informations-title=Informationen
+public-recipe_categories-title=Kategorien
+public-recipe_tags-title=Tags
+public-recipe_published-title=Veröffentlicht
+public-recipe_version-title=Version
+public-recipe_open-original=Original öffnen
+public-recipe_app-hint-1=Diese Rezeptanzeige ist in ihrer Funktionalität limitiert.
+public-recipe_app-hint-2=Um alle Funktionen nutzen zu können, öffne diese Seite in der FlavorMate App.
+public-recipe_app-hint-3=Falls du die App noch nicht besitzt, kannst du sie dir herunterladen.
+# Course
+course_appetizer=Vorspeise
+course_main-dish=Hauptspeise
+course_dessert=Nachspeise
+course_side-dish=Beilage
+course_bakery=Backware
+course_drink=Getränk
+# Diet
+diet_meat=Fleisch
+diet_fish=Fisch
+diet_vegetarian=Vegetarisch
+diet_vegan=Vegan
